--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -8,4 +8,10 @@
 
 .link {
   color: blue;
+  font-weight: bold;
+  margin: 5px 0;
+  display: block;
+  min-width: 100px;
+  display: inline-block;
+  background-color: yellow;
 }
